<resources>
    <string name="app_name">POKEMON APP</string>
    <string name="no_pokemons_message_bold">No Pokemons</string>
    <string name="no_pokemons_message_description">To add some Pokemons,\npress + icon</string>
    <string name="pokemon_list_activity_title">Pokemon</string>
    <string name="action_add_pokemon">Add</string>
    <string name="save_added_pokemon">Save</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="save_changes_dialog">Would you like to save the changes?</string>
    <string name="explanation_for_storage_read_permission">Application has to have access to mobile
        device storage in order to enable you to set pokemon profile picture.</string>
    <string name="close">Close</string>
    <string name="chooseBetweenCameraAndStorage">Choose photo:</string>
    <string name="emailHint">E-mail</string>
    <string name="passwordHint">Password</string>
    <string name="signUpString">Sign up</string>
    <string name="logInString">Log in</string>
    <string name="userNameHint">Username</string>
    <string name="passwordConfirmationHint">Confirm password</string>
    <string name="drawer_open">open</string>
    <string name="drawer_close">close</string>
    <string name="title_activity_sadfasefasdfg">sadfasefasdfg</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
</resources>