<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/fragment_log_in_root_element">

    <ScrollView
        android:id="@+id/log_in_fragment_scroll_view"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/fragment_log_in_log_in_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:isScrollContainer="false">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:visibility="invisible"
                android:id="@+id/fragment_log_in_pokemon_logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:src="@drawable/pokemon_logo"/>

            <ImageView
                android:visibility="invisible"
                android:id="@+id/fragment_log_in_poke_ball"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/fragment_log_in_pokemon_logo"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:src="@drawable/pokeball" />

            <LinearLayout
                android:visibility="invisible"
                android:layout_marginTop="20dp"
                android:id="@+id/fragment_log_in_ll"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="5dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/fragment_log_in_poke_ball"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent">

                <ImageView
                    android:layout_marginRight="20dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_mail"/>

                <EditText
                    android:id="@+id/fragment_log_in_email_edit_text"
                    android:layout_gravity="center_vertical"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/emailHint" />

            </LinearLayout>


            <LinearLayout
                android:id="@+id/fragment_log_in_ll2"
                android:visibility="invisible"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="5dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/fragment_log_in_ll"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent">

                <ImageView
                    android:layout_marginRight="20dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_lock"/>

                <EditText
                    android:id="@+id/fragment_log_in_password_edit_text"
                    android:layout_gravity="center_vertical"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/passwordHint"
                    android:drawableEnd="@drawable/ic_visibility_off"
                    android:inputType="textPassword" />

            </LinearLayout>

        </android.support.constraint.ConstraintLayout>

    </ScrollView>


    <Button
        android:visibility="gone"
        android:id="@+id/fragment_log_in_sign_up_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/signUpString"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:textColor="@color/colorPrimary"
        android:background="@color/colorWhite" />


    <Button
        android:visibility="gone"
        android:id="@+id/fragment_log_in_log_in_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/logInString"
        app:layout_constraintBottom_toTopOf="@+id/fragment_log_in_sign_up_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:textColor="@color/colorWhite"
        android:background="@color/colorPrimary" />

</android.support.constraint.ConstraintLayout>
