<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="0dp">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_marginTop="10dp"
                android:id="@+id/fragment_sign_up_ll"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="5dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent">

                <ImageView
                    android:layout_marginRight="20dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_mail"/>

                <EditText
                    android:id="@+id/fragment_sign_up_email_edit_text"
                    android:layout_gravity="center_vertical"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/emailHint"/>

            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="10dp"
                android:id="@+id/fragment_sign_up_ll2"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="5dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/fragment_sign_up_ll"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent">

                <ImageView
                    android:layout_marginRight="20dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_person"/>

                <EditText
                    android:id="@+id/fragment_sign_up_username_edit_text"
                    android:layout_gravity="center_vertical"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/userNameHint"/>

            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="10dp"
                android:id="@+id/fragment_sign_up_ll3"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="5dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/fragment_sign_up_ll2"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent">

                <ImageView
                    android:layout_marginRight="20dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_lock"/>

                <EditText
                    android:id="@+id/fragment_sign_up_password_edit_text"
                    android:layout_gravity="center_vertical"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:inputType="textPassword"
                    android:hint="@string/passwordHint"/>

            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="10dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="5dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/fragment_sign_up_ll3"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent">

                <ImageView
                    android:visibility="invisible"
                    android:layout_marginRight="20dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_lock"/>

                <EditText
                    android:id="@+id/fragment_sign_up_password_confirmation_edit_text"
                    android:layout_gravity="center_vertical"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword" />

            </LinearLayout>


        </android.support.constraint.ConstraintLayout>

    </ScrollView>

    <Button
        android:id="@+id/fragment_sign_up_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/signUpString"
        android:background="@color/colorPrimary"
        android:textColor="@color/colorWhite"/>

</android.support.constraint.ConstraintLayout>